jenkins_as_deployment/jenkins-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-manager
  namespace: jenkins
  labels:
    app.kubernetes.io/name: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: jenkins
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: jenkins
    spec:
      volumes:
        - name: pvc-jenkins
          persistentVolumeClaim:
            claimName: jenkins-pvc
      containers:
        - name: jenkins-manager
          image: jenkins/jenkins:2.452.3
          ports:
            - name: manager
              containerPort: 8080
              protocol: TCP
            - name: jnlp
              containerPort: 50000
              protocol: TCP
          resources:
            limits:
              cpu: 900m
              memory: 5G
            requests:
              cpu: 900m
              memory: 5G
          volumeMounts:
            - name: pvc-jenkins
              mountPath: /var/jenkins_home
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      serviceAccountName: jenkins-admin
      serviceAccount: jenkins-admin
      securityContext:
        runAsUser: 0
        runAsNonRoot: false
        fsGroup: 0
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
